Fix tabs not showing as selected.
git-svn-id: https://devel.nmrbox.org/svn/nmrbox/trunk/web@7223 33504fd2-e2af-4168-9044-610c50ee6ce2

--- a/newweb/nmrbox/src/custom-theme.scss
+++ b/newweb/nmrbox/src/custom-theme.scss
@@ -504,6 +504,8 @@ mat-select {
 .mat-tab-label-active {
   background-position: 0px 5px;
   border: 0px;
+  background-color: #007088;
+  opacity: 0;
 }
 
 /*
